--- a/forms.html
+++ b/forms.html
@@ -9,8 +9,18 @@
     <form>
         <label>
             Nome:
+            <input type="text"/>
+        </label>
+        <br/>
+        <label>
+            Email:
         </label>
         <input type="text"/>
+        <br/>
+        <label>
+            Senha:
+        </label>
+        <input type="password"/>
     </form>
 </body>
 </html>
