--- a/forms.html
+++ b/forms.html
@@ -19,8 +19,13 @@
         <br/>
         <label>
             Senha:
-        </label>
         <input type="password"/>
+        </label>
+        <br/>
+        <label>
+        
+        <input type="submit"/>
+        </label>
     </form>
 </body>
 </html>
