--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
 <body>
     <form>
         <label>
-            Nome:
+            Nome de Usuário:
             <input type="text"/>
         </label>
         <br/>
