--- a/forms.html
+++ b/forms.html
@@ -14,7 +14,7 @@
         </label>
         <br/>
         <label>
-            Seu Email:
+            Digite Seu Email:
         </label>
         <input type="text"/>
         <br/>
